-------------------------------------------------------------------
Fri Sep  7 13:49:53 CEST 2012 - tgoettlicher@suse.de

- Version 2.42.2

-------------------------------------------------------------------
Tue Sep  4 14:35:49 CEST 2012 - tgoettlicher@suse.de

- Fixed requirements in doc spec file

-------------------------------------------------------------------
Mon Jul 16 12:26:04 CEST 2012 - tgoettlicher@suse.de

- new package
