@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Wed Dec 12 10:57:27 CET 2012 - ma@suse.de
+
+- Interim continue using deprecated history reader API
+
+-------------------------------------------------------------------
 Fri Sep  7 13:49:53 CEST 2012 - tgoettlicher@suse.de
 
 - Version 2.42.2
